fix collapse side bar

--- a/assets/sass/elements/buttons.scss
+++ b/assets/sass/elements/buttons.scss
@@ -280,7 +280,7 @@ a:is(:hover, :focus, .hover, :active, .active):not([disabled]) .btn-secondary,
     }
   }
 
-  &.btn-secondary:is(:hover, :focus, .hover, :active, .active, [aria-expanded], :focus-within):not([disabled]) {
+  &.btn-secondary:is(:hover, :focus, .hover, :active, .active, [aria-expanded], :focus-within):not([disabled]):not(.btn-collapse) {
     background-color: var(--colour);
     color: var(--colour-primary-theme);
     border-color: transparent!important;
