--- a/assets/sass/foundations/reboot.scss
+++ b/assets/sass/foundations/reboot.scss
@@ -182,12 +182,12 @@ details {
   var(--padding-inline) [container-end]
   var(--full-width-start) [full-width-end];
 
-  &:not(:has(.container:last-child)){
+  &:not(:has(.container:last-child)):not(:has(iam-collapsible-side:last-child)){
     padding-bottom: 1rem;
   }
 }
 
-main > :not(.full-width, .container, iam-header, [class*="bg-"]) {
+main > :not(.full-width, .container, iam-header, iam-collapsible-side, [class*="bg-"]) {
   grid-column: content;
 }
 
@@ -196,7 +196,7 @@ main > :is(.full-width, .container, iam-header) {
   grid-column: container;
 }
 
-main > :is(.full-width, [class*="bg-"]) {
+main > :is(.full-width, [class*="bg-"], iam-collapsible-side) {
   grid-column: full-width;
 }
 
